# waitpidx

./: Cargo.toml  README.md
examples/: waitpid.rs  waitpid_async.rs  waitpid_many_async.rs
src/: lib.rs
src/backends/: mod.rs  pidfd.rs
src/backends/netlink/: async_.rs  binding.rs  bpf.rs  connection.rs  mod.rs  sync.rs
src/backends/pidfd/: async_fd.rs  mod.rs  sync_fd.rs
src/utils/: incomplete_array.rs  mod.rs
