[package]
name = "waitpidx"
version = "0.0.0"
authors = ["Konge <zkonge@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zkonge/waitpidx"
keywords = ["waitpid", "process", "linux"]
categories = ["os"]
readme = "README.md"

[dependencies]
classic_bpf = { version = "0.1.1", optional = true }
crossbeam-channel = { version = "0.5.11", optional = true }
libc = "0.2"
linux-raw-sys = { version = "0.6.3", features = ["netlink"], optional = true }
rustix = { version = "0.38.30", features = ["event", "process"] }
tokio = { version = "1.39.3", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1.39.3", features = ["rt"] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }

[features]
default = ["async"]
async = ["dep:tokio"]
netlink = [
    "dep:classic_bpf",
    "dep:crossbeam-channel",
    "dep:linux-raw-sys",
    "rustix/pipe",
    "rustix/net",
]
async-netlink = ["async", "netlink", "tokio/rt", "tokio/sync"]

[[example]]
name = "waitpid_async"
required-features = ["async"]

[[example]]
name = "waitpid_many_async"
required-features = ["async"]

[[example]]
name = "waitpid"
